--- a/index.html
+++ b/index.html
@@ -216,8 +216,7 @@
     <header class="relative h-[85vh] w-full overflow-hidden">
         <!-- Background Image -->
         <div class="absolute inset-0">
-            <img src="https://images.unsplash.com/photo-1514525253361-b83f859b73c0?auto=format&fit=crop&q=80&w=1920"
-                alt="Hero Background" class="w-full h-full object-cover">
+            <img src="images/premispato.jpg" alt="Hero Background" class="w-full h-full object-cover">
             <div class="absolute inset-0 bg-gradient-to-r from-[#141414] via-transparent to-transparent opacity-90">
             </div>
             <div class="absolute inset-0 hero-vignette"></div>
